--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
             <main>
                 <div class="persons grup1">
-                    <img src="/11.notifications page main/assets/images/avatar-mark-webber.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-mark-webber.webp" alt="" class="img">
                     <div>
                         <div class="name-circle">
-                            <p><span class="name"><a href="">Mark Webber</a></span> reacted to your recent post <span class="first"><a href="">My first tournament today!</a> <img src="/11.notifications page main/assets/images/circle-solid.svg" alt="" class="circle"> </span></p>
+                            <p><span class="name"><a href="">Mark Webber</a></span> reacted to your recent post <span class="first"><a href="">My first tournament today!</a> <img src="/11.notifications-page-main/assets/images/circle-solid.svg" alt="" class="circle"> </span></p>
                         </div>
                         <p>1m ago</p>
                     </div>
@@ -33,20 +33,20 @@
                 </div>
 
                 <div class="persons grup1">
-                    <img src="/11.notifications page main/assets/images/avatar-angela-gray.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-angela-gray.webp" alt="" class="img">
                     <div>
                         <div class="name-circle">
-                            <p><span class="name"><a href="">Angela Gray</a></span> followed you <img src="/11.notifications page main/assets/images/circle-solid.svg" alt="" class="circle"></p>
+                            <p><span class="name"><a href="">Angela Gray</a></span> followed you <img src="/11.notifications-page-main/assets/images/circle-solid.svg" alt="" class="circle"></p>
                         </div>
                         <p>5m ago</p>
                     </div>
                 </div>
 
                 <div class="persons grup1">
-                    <img src="/11.notifications page main/assets/images/avatar-jacob-thompson.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-jacob-thompson.webp" alt="" class="img">
                     <div>
                         <div class="name-circle">
-                        <p><span class="name"><a href="">Jacob Thompson</a></span> has joined your group <span class="chess"><a href="">Chess Club</a></span> <img src="/11.notifications page main/assets/images/circle-solid.svg" alt="" class="circle"></p>
+                        <p><span class="name"><a href="">Jacob Thompson</a></span> has joined your group <span class="chess"><a href="">Chess Club</a></span> <img src="/11.notifications-page-main/assets/images/circle-solid.svg" alt="" class="circle"></p>
                     </div>
                         <p>1 day ago</p>
                     </div>
@@ -55,7 +55,7 @@
                 
                 <section>
                     <div class="persons">
-                        <img src="/11.notifications page main/assets/images/avatar-rizky-hasanuddin.webp" alt="" class="img">
+                        <img src="/11.notifications-page-main/assets/images/avatar-rizky-hasanuddin.webp" alt="" class="img">
                         <div>
                             <p><span class="name"><a href="">Rizky Hasanuddin</a></span> sent you a private message</p>
                             <p>5 days ago</p>
@@ -73,18 +73,18 @@
                 </section>
 
                 <div class="persons grup2">
-                    <img src="/11.notifications page main/assets/images/avatar-kimberly-smith.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-kimberly-smith.webp" alt="" class="img">
                     <di class="com-picture">
                         <div>
                             <p><span class="name"><a href="">Kimberly Smith</a></span> commented on your picture</p>
                             <p>1 week ago</p>
                         </div>
-                        <a href=""><img src="/11.notifications page main/assets/images/image-chess.webp" alt="persona con sueter rojo" class="img"></a>
+                        <a href=""><img src="/11.notifications-page-main/assets/images/image-chess.webp" alt="persona con sueter rojo" class="img"></a>
                     </di>
                 </div>
 
                 <di class="persons">
-                    <img src="/11.notifications page main/assets/images/avatar-nathan-peterson.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-nathan-peterson.webp" alt="" class="img">
                     <div>
                         <p><span class="name"><a href="">Nathan Peterson</a></span> reacted to your recent post <pan class="first">5 end-game strategies to increase your win rate</pan></p>
                         <p>2 weeks ago</p>
@@ -92,7 +92,7 @@
                 </di>
 
                 <div class="persons">
-                    <img src="/11.notifications page main/assets/images/avatar-anna-kim.webp" alt="" class="img">
+                    <img src="/11.notifications-page-main/assets/images/avatar-anna-kim.webp" alt="" class="img">
                     <div>
                         <p><span class="name"><a href="">Anna Kim</a></span> left the group <span class="chess">Chess Club</span></p>
                         <p>2 weeks ago</p>
@@ -101,6 +101,6 @@
 
             </main>
         </div>
-        <script src="/11.notifications page main/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
