Cambiando di por div

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -74,22 +74,22 @@
 
                 <div class="persons grup2">
                     <img src="/11.notifications-page-main/assets/images/avatar-kimberly-smith.webp" alt="" class="img">
-                    <di class="com-picture">
+                    <div class="com-picture">
                         <div>
                             <p><span class="name"><a href="">Kimberly Smith</a></span> commented on your picture</p>
                             <p>1 week ago</p>
                         </div>
                         <a href=""><img src="/11.notifications-page-main/assets/images/image-chess.webp" alt="persona con sueter rojo" class="img"></a>
-                    </di>
+                    </div>
                 </div>
 
-                <di class="persons">
+                <div class="persons">
                     <img src="/11.notifications-page-main/assets/images/avatar-nathan-peterson.webp" alt="" class="img">
                     <div>
                         <p><span class="name"><a href="">Nathan Peterson</a></span> reacted to your recent post <pan class="first">5 end-game strategies to increase your win rate</pan></p>
                         <p>2 weeks ago</p>
                     </div>
-                </di>
+                </div>
 
                 <div class="persons">
                     <img src="/11.notifications-page-main/assets/images/avatar-anna-kim.webp" alt="" class="img">
