--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html> <!-- lang="es" -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -86,7 +86,7 @@
                 <div class="persons">
                     <img src="/11.notifications-page-main/assets/images/avatar-nathan-peterson.webp" alt="" class="img">
                     <div>
-                        <p><span class="name"><a href="">Nathan Peterson</a></span> reacted to your recent post <pan class="first">5 end-game strategies to increase your win rate</pan></p>
+                        <p><span class="name"><a href="">Nathan Peterson</a></span> reacted to your recent post <span class="first">5 end-game strategies to increase your win rate</span></p>
                         <p>2 weeks ago</p>
                     </div>
                 </div>
